# ByteClaw

./: .gitignore  LICENSE  README.md  pyproject.toml
src/byteclaw/: __init__.py  main.py
src/byteclaw/agents/: __init__.py  code_agent.py  search_agent.py
src/byteclaw/cli/: app.py
src/byteclaw/cli/tui/: __init__.py  app.py  approval.py  logo.py
src/byteclaw/core/: __init__.py  agent.py  approval.py  checkpoint.py  paths.py  session.py  state.py  trace.py
src/byteclaw/graph/: __init__.py  memory.py  nodes.py  state.py  workflow.py
src/byteclaw/prompts/: __init__.py  stage2.py  stage3.py  stage4.py
src/byteclaw/providers/: __init__.py  openai_provider.py
src/byteclaw/tools/: __init__.py  bash_tool.py  file_tools.py  grep_tool.py  registry.py  web_search_tool.py
tests/: __init__.py  test_agent.py  test_approval.py  test_checkpoint.py  test_cli.py  test_code_agent.py  test_graph_nodes.py  test_graph_state.py  test_memory.py  test_openai_provider.py  test_search_agent.py  test_session.py  test_tools.py  test_trace.py  test_tui.py  test_web_search_tool.py  test_workflow.py
