[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "byteclaw"
version = "0.1.0"
description = "A small workspace-scoped coding agent CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tavily-python>=0.5.0",
    "textual>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
byteclaw = "byteclaw.cli.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
